<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学生来吐槽</string>
    <string name="description_image">微型公社new</string>
    <string name="image_text">图文</string>
    <string name="voice_text">语音</string>
    <string name="vote_text">投票</string>
    <string name="picture_text">图片</string>
    <string name="face_text">表情</string>
    <string name="cancle_text">取消</string>
    <string name="confirm_text">确定</string>
    <string name="selectAlbum_text">选择相册</string>
    <string name="action_settings">设置</string>
    <string name="praise_text">称赞者</string>
    <string name="groupName_text">群组名称</string>
    <string name="groupPosition_text">群组位置</string>
    <string name="ok_text">完成</string>
    <string name="createGroupOk_text">恭喜您, 您的群组已经创建成功, 赶快邀请更多的小伙伴来加入您的群组吧   !</string>
    <string name="invitaMailFriend_text">邀请通讯录好友</string>
    <string name="invitaLocalFriend_text">邀请本地好友</string>
    <string name="searchNearFriend_text">搜索附近好友</string>
    <string name="boardName_text">版块名称</string>
    <string name="boardHead_text">版块头像</string>
    <string name="boardCover_text">版块封面</string>
    <string name="boardDescribe_text">版块描述</string>

    <!-- alert message -->
    <string name="alert_text_phonenotnull">手机号不能为空</string>
    <string name="alert_text_passnotnull">密码不能为空</string>
    <string name="alert_text_passlength">密码长度需大于六位</string>
    <string name="alert_text_codenotnull">验证码不能为空</string>
    <string name="alert_text_nointernet">没有网络连接</string>
    <string name="alert_text_phoneformaterror">手机号码格式错误</string>
    <string name="alert_text_nettimeout">网络连接超时</string>
    <string name="alert_text_neterror">网络错误</string>
    <!-- button text -->
    <string name="button_search">查  找</string>
    <string name="button_send">发送请求</string>
    <!-- text -->
    <string name="text_search">精确查找</string>
    <!-- hint text -->
    <string name="hint_enterphone">请输入手机号</string>
    <string name="hint_verify">请输入验证消息</string>
    <!-- common textview -->
    <string name="text_verify">对方启用了朋友验证</string>

    <!-- BusinessCard -->
    <string name="business_modify_card">修改名片</string>
    <string name="business_not_label">暂无标签</string>
    <string name="business_modify_mycard">修改我的名片</string>
    <string name="business_initiate_chat">发起聊天</string>
    <string name="business_modify_remarks">修改备注</string>
    <string name="business_relieve_relation">解除好友关系</string>
    <string name="business_blacklist_remove">从黑名单移除</string>
    <string name="business_add_to_blacklist">添加到黑名单</string>
    <string name="business_add_as_friend">加为好友</string>
    <string name="business_chat_room">聊天室</string>
    <string name="business_input_room_info">请输入群组描述信息</string>
    <string name="business_room_not_business">此群组暂无业务</string>
    <string name="business_personal_not_business">此用户暂无签名</string>
    <string name="business_modify_room_card">修改群组名片</string>
    <string name="business_add_to_room">加入群组</string>
    <string name="business_add_to_groupcircle">加入群组分组</string>
    <string name="business_go_community">进入社区</string>
    <string name="business_my_info">我的详情</string>
    <string name="business_personal_statement">个人宣言：</string>
    <string name="business_hobbies">爱好：</string>
    <string name="business_regist_time">注册时间：</string>
    <string name="business_personal_info">个人详情</string>
    <string name="business_room_info">群组详情</string>
    <string name="business_room_name">名称：</string>
    <string name="business_room_description">描述：</string>
    <string name="business_label">标签：</string>
    <string name="business_community_info">社区详情</string>
    <string name="business_male">男</string>
    <string name="business_female">女</string>
    <string name="business_he_share">他的分享</string>
    <string name="business_she_share">她的分享</string>
    <string name="business_my_share">我的分享</string>
    <string name="business_l_ID">ID:  </string>
    <string name="business_l_age">年龄：</string>
    <string name="business_l_sex">性别：</string>
    <string name="business_l_main_business">主要业务:</string>
    <string name="business_l_label">标签:  </string>
    <string name="business_l_regist_time">创建时间:  </string>
    <string name="business_l_distance">距离:  </string>
    <string name="business_l_qrcode">二维码</string>

    <!-- CircleManage -->
    <string name="circleManage_group_manage">好友分组管理</string>

    <!-- Chat -->
    <string name="send">发送</string>
    <string name="holdOnTape">按住录音</string>
    <string name="takePhoto">拍照</string>
    <string name="album">相册</string>
    <string name="location">位置</string>
    <string name="seconds">秒</string>
    <string name="slideFingers">手指上滑，可取消发送</string>
    <string name="loosenFingers">松开手指，取消发送</string>
    <string name="groupDetails">群组详情</string>
    <string name="groupAlbum">群组相册</string>
    <string name="groupMembers">群组成员</string>
    <string name="closeNotice">关闭提示</string>
    <string name="openNotice">打开提示</string>
    <string name="share">分享</string>
    <string name="sendCard">发送名片</string>
    <string name="tureOff">关灯</string>
    <string name="personalDetails">个人详情</string>
    <string name="personalAlbum">个人相册</string>
    <string name="setting">设置</string>
    <string name="locationing">正在定位，请稍后</string>
    <string name="personCard">个人名片</string>
    <string name="groupCard">群组名片</string>
    <string name="cilkeLoadMore">点击加载更多</string>
    <string name="expressionManage">表情管理</string>
    <string name="shareTitle">我发送了一个分享，点击看看吧</string>
    <string name="delete">删除</string>

    <!-- Chat SpecialGifMessageString -->
    <string name="specialGifMessageString">捏捏脸~</string>
    <string name="specialGifMessageString1">嘤嘤嘤~</string>
    <string name="specialGifMessageString2">小婊砸！</string>
    <string name="specialGifMessageString3">求带走~</string>
    <string name="specialGifMessageString4">带你吃麻辣烫~</string>
    <string name="specialGifMessageString5">叔叔我们不约~</string>
    <string name="specialGifMessageString6">离我远点，你胖到我了！</string>
    <string name="specialGifMessageString7">谁在装逼好刺眼！</string>
    <string name="specialGifMessageString8">我项链两千多！</string>
    <string name="specialGifMessageString9">我跟你什么仇什么冤？</string>

</resources>