<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".AddFriendActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#33000000" >

        <LinearLayout
            android:id="@+id/backview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="验证信息"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="172dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/card_background"
        android:padding="10dp"
        tools:ignore="UselessParent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_verify"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="26dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="47dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/hint_verify"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#ddd" >
        </EditText>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="105dp"
            android:background="#2fff"
            android:text="@string/button_send"
            android:textColor="#fff"
            android:textSize="19sp" />
    </RelativeLayout>

</RelativeLayout>