<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/dialogMainContent"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:id="@+id/releaseImageTextShareButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="UselessParent" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/reloption_bk_nor"
                android:padding="15dp"
                android:src="@drawable/reloption_camer" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="65dp"
                android:text="@string/image_text"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/releaseVoiceTextShareButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="UselessParent" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/reloption_bk_nor"
                android:padding="15dp"
                android:src="@drawable/reloption_voice" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="65dp"
                android:text="@string/voice_text"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/releaseVoteShareButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="200dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="UselessParent" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/reloption_bk_nor"
                android:padding="15dp"
                android:src="@drawable/reloption_vote" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="65dp"
                android:text="@string/vote_text"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>