<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <include layout="@layout/view_back_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.5"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/boardHead_text"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/boardHead"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:src="@drawable/tempicon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3.0"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/boardCover_text"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >

            <ImageView
                android:id="@+id/boardCover"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/tempicon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/boardName_text"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#fff" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#fff" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="#fff" />

            <EditText
                android:id="@+id/boardName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:background="#0000"
                android:gravity="center_vertical"
                android:hint="2-15个字"
                android:maxLength="15"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#fff"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2.0"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|top"
            android:layout_marginLeft="10dp"
            android:text="@string/boardDescribe_text"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/boardDescribe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:background="#0000"
                android:gravity="center_vertical|top"
                android:hint="50个字以内"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#fff"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#fff" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#fff" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="#fff" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#38000000"
        android:gravity="center"
        android:text="@string/ok_text"
        android:textColor="#fff"
        android:textSize="18sp" >
    </TextView>

</LinearLayout>